# hypeeai-turbo

./: .gitignore  PRD.md  README.md  package.json  pnpm-lock.yaml  turbo.json
.cursor/rules/common/: 01-base.mdc 
apps/api/: Dockerfile  README.md  package.json  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: auth.py  config.py  sso_providers.py
apps/api/app/models/: auth.py
apps/api/app/routes/: auth.py  facebook.py  ping.py
apps/web/: components.json  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/demo/: page.tsx
